raiseitnow/force-app/main/default/objects/Service_Template__c/fields/Project_Fields__c.field-meta.xml
<CustomField>
    <fullName>Project_Fields__c</fullName>
    <label>Project Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>