raiseitnow/force-app/main/default/objects/Service_Template__c/fields/Project_Keys__c.field-meta.xml
<CustomField>
    <fullName>Project_Keys__c</fullName>
    <label>Project Keys</label>
    <length>50</length>
    <type>Text</type>
</CustomField>