raiseitnow/force-app/main/default/objects/Service_Template__c/fields/User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>User_Lookup__c</fullName>
    <label>User Lookup</label>
    <length>200</length>
    <type>Text</type>
</CustomField>