raiseitnow/force-app/main/default/objects/Service_Template__c/recordTypes/Project_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Project_Record_Type</fullName>
    <active>false</active>
    <label>Project Record Type</label>
</RecordType>