raiseitnow/force-app/main/default/objects/Service_Template__c/recordTypes/Template_RecordType.recordType-meta.xml
<RecordType>
    <fullName>Template_RecordType</fullName>
    <active>true</active>
    <label>Template RecordType</label>
</RecordType>