raiseitnow/force-app/main/default/objects/Service_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project_Keys__c</columns>
    <columns>Project_Fields__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Service_Name__c</columns>
    <columns>Username__c</columns>
    <columns>User_Lookup__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>